Add headers and buttons

--- a/index.html
+++ b/index.html
@@ -5,20 +5,21 @@
         <script src="index.js"></script>
     </head>
     <body>
-        <div id="nav">
-
-        </div>
         <div id="header">
-
+            <h1>QuiRP: Quick Role-Playing</h1>
+            <p>Play role-play campaigns online, in 5 minutes or less.</p>
         </div>
         <div id="choose-adv">
-
+            <button onclick="startAdvOne()">Adventure 1</button>
+            <button onclick="startAdvTwo()">Adventure 2</button>
+            <button onclick="startAdvThree()">Adventure 3</button>
         </div>
         <div id="num-players">
-
+            <button onclick="playersOne()">1 Player</button>
+            <button onclick="playersTwo()">2 Players</button>
         </div>
         <div id="play">
-            
+
         </div>
     </body>
 </html>
