--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>QuiRP: Quick Role-Playing</title>
-        <script src="index.js"></script>
+        <script src="index.js" type="text/javascript"></script>
     </head>
     <body>
         <div id="header">
