--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>QuiRP: Quick Role-Playing</title>
         <script src="index.js" type="text/javascript"></script>
+        <link  href="index.css" rel="stylesheet">
     </head>
     <body>
         <div id="header">
