--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <head>
         <title>QuiRP: Quick Role-Playing</title>
         <script src="index.js" type="text/javascript"></script>
-        <link  href="index.css" rel="stylesheet">
+        <link rel="stylesheet" href="index.css">
     </head>
     <body>
-        <div id="header">
+        <div class="header">
             <h1>QuiRP: Quick Role-Playing</h1>
             <p>Play role-play campaigns online, in 5 minutes or less.</p>
         </div>
