Added class tags for all divisions

--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
-        <div class="header">
+        <div class="header" id="header">
             <h1>QuiRP: Quick Role-Playing</h1>
             <p>Play role-play campaigns online, in 5 minutes or less.</p>
             <button onclick="chooseAdv()">Choose Your Adventure!</button>
         </div>
-        <div id="choose-adv">
+        <div class="choose-adv" id="choose-adv">
             <button onclick="startAdvOne()">Adventure 1</button>
             <button onclick="startAdvTwo()">Adventure 2</button>
             <button onclick="startAdvThree()">Adventure 3</button>
         </div>
-        <div id="num-players">
+        <div class="num-players" id="num-players">
             <button onclick="playersOne()">1 Player</button>
             <button onclick="playersTwo()">2 Players</button>
         </div>
-        <div id="play">
+        <div class="play" id="play">
 
         </div>
     </body>
