--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
         <title>QuiRP: Quick Role-Playing</title>
         <script src="index.js" type="text/javascript"></script>
         <link rel="stylesheet" href="index.css">
@@ -17,11 +18,13 @@
             <button onclick="startAdvThree()">Adventure 3</button>
         </div>
         <div class="num-players" id="num-players">
+            <label for="player-one">Player 1 name:</label>
+            <input type="text" id="player-one" name="player-one"><br>
             <button onclick="playersOne()">1 Player</button>
             <button onclick="playersTwo()">2 Players</button>
         </div>
         <div class="play" id="play">
-
+            
         </div>
     </body>
 </html>
