Add onload function and change adventure name

--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
         <script src="index.js" type="text/javascript"></script>
         <link rel="stylesheet" href="index.css">
     </head>
-    <body>
+    <body onload="onLoad()">
         <div class="header" id="header">
             <h1>QuiRP: Quick Role-Playing</h1>
             <p>Play role-play campaigns online, in 5 minutes or less.</p>
             <button onclick="chooseAdv()">Choose Your Adventure!</button>
         </div>
         <div class="choose-adv" id="choose-adv">
-            <button onclick="choseAdvOne()">Adventure 1</button>
+            <button onclick="choseAdvOne()">Greedy's Robots: The Code of Destiny</button>
             <button onclick="choseAdvTwo()">Adventure 2</button>
             <button onclick="choseAdvThree()">Adventure 3</button>
         </div>
