Fixed button styling

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
             <button onclick="chooseAdv()">Choose Your Adventure!</button>
         </div>
         <div class="choose-adv" id="choose-adv">
-            <button onclick="choseAdvOne()">Greedy's Robots: The Code of Destiny</button>
-            <button onclick="choseAdvTwo()">Adventure 2</button>
-            <button onclick="choseAdvThree()">Adventure 3</button>
+            <button onclick="choseAdvOne()" class="advOne">Greedy's Robots: The Code of Destiny</button>
+            <button onclick="choseAdvTwo()" class="advTwo">Adventure 2</button>
+            <button onclick="choseAdvThree()" class="advThree">Adventure 3</button>
         </div>
         <div class="num-players" id="num-players">
             <label for="player-one">Player 1 name:</label>
             <input type="text" id="player-one" name="player-one"><br>
-            <button onclick="playersOne()">1 Player</button>
-            <button onclick="playersTwo()">2 Players</button>
+            <button onclick="playersOne()" class="oneplayer">1 Player</button>
+            <button onclick="playersTwo()" class="twoplayer">2 Players</button>
         </div>
         <div class="play" id="play">
             <p id="playerprompt"></p>
