--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>QuiRP: Quick Role-Playing</title>
         <script src="index.js" type="text/javascript"></script>
         <link rel="stylesheet" href="index.css">
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
     </head>
     <body onload="onLoad()">
         <div class="header" id="header">
