Fixed true project functionality

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
         </div>
         <div class="choose-adv" id="choose-adv">
             <button onclick="choseAdvOne()" class="advOne">Greedy's Robots: The Code of Destiny</button>
-            <button onclick="choseAdvTwo()" class="advTwo">Adventure 2</button>
-            <button onclick="choseAdvThree()" class="advThree">Adventure 3</button>
+            <button onclick="choseAdvTwo()" class="advTwo" disabled="true">Adventure 2<br>(Coming Soon)</button>
+            <button onclick="choseAdvThree()" class="advThree" disabled="true">Adventure 3<br>(Coming Soon)</button>
         </div>
         <div class="num-players" id="num-players">
             <label for="player-one">Player 1 name:</label>
-            <input type="text" id="player-one" name="player-one"><br>
+            <input type="text" id="player-one" name="player-one"><br><br>
             <button onclick="playersOne()" class="oneplayer">1 Player</button>
-            <button onclick="playersTwo()" class="twoplayer">2 Players</button>
+            <button onclick="playersTwo()" class="twoplayer" disabled="true">2 Players (Coming Soon)</button>
         </div>
         <div class="play" id="play">
             <p id="playerprompt"></p>
